--- a/Acercadelossphereshows.html
+++ b/Acercadelossphereshows.html
@@ -49,7 +49,7 @@
     <div class="cuadrado"></div>
     <div class="texto">
         <!-- Aquí puedes poner el texto -->
-        Ve aquí los dislikes, likes y comentarios de algunos Sphere Shows
+        Ve aquí los dislikes, likes y comentarios de algunos Sphere Shows y cómics
     </div>
 </body>
 
