--- a/Polskand-services.html
+++ b/Polskand-services.html
@@ -34,7 +34,7 @@
     <header>
         <div class="container">
             <!-- Logotipo -->
-            <img src="polandia.png" alt="Polska net" class="logotipo">
+            <img src="Polandia.png" alt="Polska net" class="logotipo">
             <h1>Bienvenido a Polska net</h1>
         </div>
     </header>
