--- a/CBallscomics.html
+++ b/CBallscomics.html
@@ -174,7 +174,7 @@ width: 60%;margin: auto;}
 <body>
     <div class="container">
         <h1>Aviso, al crear una cuenta, Google Formularios te dice que no envies contraseñas a través de la plataforma, pero no usamos contraseñas de sitios externos, porfavor usted debe crear una nueva contraseña para este sitio web CBalls comics, si no comprende, NO cree una cuenta.</h1>
-        <p>CBalls Comics,Copyright 2024, todos los derechos reservados </p>
+        <p>Hecho en Polskand Services. WarsawviaPS. CBalls Comics,Copyright 2024, todos los derechos reservados </p>
 
 <label> <a href="https://docs.google.com/forms/d/e/1FAIpQLSeHP8YXuJo8Ss1qi14JYXF4F1xQL3B6y-rN3e7necberILTTw/viewform?usp=sf_link">Públicar un cómic</a> </label>
 
@@ -187,6 +187,8 @@ width: 60%;margin: auto;}
 <label> <a href="https://docs.google.com/forms/d/e/1FAIpQLScVCBihzItZSJF4WDdSzdZzKUjwRWSoFY8r7ppmFQxWh1i0fA/viewform?usp=sf_link">Eliminar cómic</a> </label>
 
 <label> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTv72QeYsBVIBRCVAWk4m4-MUR60kRMT7Sja6USO1kBBVbmg/viewform?usp=sf_link">Guardar un cómic en la galería</a> </label>
+
+        <label> <a href="https://alguienxd99.github.io/cballscomics.github.io/Polskand-services.html">Polskand Services</a> </label>
 
 </body>
 </html>
