--- a/Polskand-services.html
+++ b/Polskand-services.html
@@ -40,10 +40,11 @@
     </header>
     <main>
         <div class="container">
-            <h1>Polskand-services es una web que te permite crear páginas web de Countryballs. Además, tendrás algunos beneficios como protección de derechos de autor y enlaces directos a tus sitios.</h1>
+            <h1>Polskand-services es una web que te permite crear páginas web de Countryballs. Además, tendrás algunos beneficios como que tus sitios sean recomendados, creamos tus sitios según tus necesidades y enlaces directos a tus sitios.</h1>
             <h2><a href="CBallscomics.html">Ir a CBallscomics</a></h2>
             <p>Todavía no se han registrado más sitios.</p>
             <p>Aclarando que la marca de agua se llama WarsawviaPS. </p>
+            <p>Este sitio aún está en funcionamiento, vuelve pronto hasta que el sitio se termine de crear. </p>
             <!-- Contenido principal de la página -->
             <!-- Aquí puedes agregar más contenido, como una descripción del servicio, enlaces a páginas de Countryballs, etc. -->
         </div>
