--- a/Polskand-services.html
+++ b/Polskand-services.html
@@ -44,7 +44,7 @@
             <h2><a href="CBallscomics.html">Ir a CBallscomics</a></h2>
             <p>Todavía no se han registrado más sitios.</p>
             <p>Aclarando que la marca de agua se llama WarsawviaPS. </p>
-            <p>Este sitio aún está en funcionamiento, vuelve pronto hasta que el sitio se termine de crear. </p>
+            <p>Este sitio aún no está en funcionamiento, vuelve pronto hasta que el sitio se termine de crear. </p>
             <!-- Contenido principal de la página -->
             <!-- Aquí puedes agregar más contenido, como una descripción del servicio, enlaces a páginas de Countryballs, etc. -->
         </div>
