--- a/Polskand-services.html
+++ b/Polskand-services.html
@@ -35,7 +35,7 @@
         <div class="container">
             <!-- Logotipo -->
             <img src="Polandia.png" alt="Polska net" class="logotipo">
-            <h1>Bienvenido a Polska net</h1>
+            <h1>Bienvenido a Polskand-services</h1>
         </div>
     </header>
     <main>
