--- a/Info.html
+++ b/Info.html
@@ -41,8 +41,8 @@
                 <a href="#">Leer más</a>
             </article>
             <article>
-                <h3>Adquisicion</h3>
-                <p>Red Company adquiere CBallsComics por gratis, al parecer quieren una plataforma en especial para aumentar su presencia en el mercado ¯\_(ツ)_/¯.</p>
+                <h3>El gran cambio</h3>
+                <p>CBalls comics ha dado un rediseño gigantesco, ahora ya puedes crear Sphere Shows desde el sitio y también la fuente de letra del sitio ahora es <b>rial</b> ¯\_(ツ)_/¯.</p>
                 <a href="#">Leer más</a>
             </article>
             <!-- Agrega más noticias según sea necesario -->
