--- a/Info.html
+++ b/Info.html
@@ -42,7 +42,7 @@
             </article>
             <article>
                 <h3>El gran cambio</h3>
-                <p>CBalls comics ha dado un rediseño gigantesco, ahora ya puedes crear Sphere Shows desde el sitio y también la fuente de letra del sitio ahora es <b>rial</b> ¯\_(ツ)_/¯.</p>
+                <p>CBalls comics ha dado un rediseño gigantesco, ahora ya puedes crear Sphere Shows desde el sitio y también la fuente de letra del sitio ahora es <b>Arial</b> ¯\_(ツ)_/¯.</p>
                 <a href="#">Leer más</a>
             </article>
             <!-- Agrega más noticias según sea necesario -->
