--- a/Foro.html
+++ b/Foro.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <header>
-        <h1>CBALLS COMICS Foro BETA</h1>
+        <h1>CBALLS COMICS Foro, --Estamos dejando obsoleto esta sección, te recomendamos ir al SERVIDOR DE GUILDED: https://guilded.gg/i/ExeRqA72</h1>
     </header>
 
     <section class="content">
