--- a/profile1.html
+++ b/profile1.html
@@ -5,7 +5,144 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Perfil de Usuario | CBalls Comics</title>
-    <link rel="stylesheet" href="styles.css">
+    
+    <style>
+        /* Estilos generales */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+
+        section#perfil {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .perfil-info {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .perfil-info img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 20px;
+        }
+
+        .perfil-info h2 {
+            font-size: 1.8em;
+            margin: 10px 0;
+        }
+
+        .perfil-info p {
+            font-size: 1.1em;
+            color: #666;
+        }
+
+        .redes-sociales {
+            margin-bottom: 30px;
+        }
+
+        .redes-sociales h3 {
+            font-size: 1.5em;
+        }
+
+        .redes-sociales ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .redes-sociales ul li {
+            margin-bottom: 10px;
+        }
+
+        .redes-sociales ul li a {
+            color: #0073e6;
+            text-decoration: none;
+        }
+
+        .redes-sociales ul li a:hover {
+            text-decoration: underline;
+        }
+
+        .galeria {
+            margin-bottom: 30px;
+        }
+
+        .galeria h3 {
+            font-size: 1.5em;
+        }
+
+        .galeria ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .galeria ul li {
+            margin-bottom: 10px;
+        }
+
+        .galeria ul li a {
+            color: #0073e6;
+            text-decoration: none;
+        }
+
+        .galeria ul li a:hover {
+            text-decoration: underline;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #333;
+            color: white;
+            margin-top: 40px;
+        }
+
+        footer p {
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
     <header>
