--- a/profile1.html
+++ b/profile1.html
@@ -158,7 +158,7 @@
 
     <section id="perfil">
         <div class="perfil-info">
-            <img src="mi-imagen.jpg" alt="Foto de perfil" class="foto-perfil">
+            <img src="POLANDXDD1.png" alt="Foto de perfil" class="foto-perfil">
             <h2>Mi Nombre: [Tu Nombre]</h2>
             <p><strong>Descripción:</strong> Soy un creador de cómics de CBalls, con un gran amor por la creatividad y el humor. Aquí comparto mis aventuras y mis personajes favoritos del mundo de los countryballs.</p>
         </div>
