--- a/profile1.html
+++ b/profile1.html
@@ -159,7 +159,7 @@
     <section id="perfil">
         <div class="perfil-info">
             <img src="POLANDXDD1.png" alt="Foto de perfil" class="foto-perfil">
-            <h2>Mi Nombre: [Tu Nombre]</h2>
+            <h2>Mi Nombre: [scharez556  (Mod) ]</h2>
             <p><strong>Descripción:</strong> Soy un creador de cómics de CBalls, con un gran amor por la creatividad y el humor. Aquí comparto mis aventuras y mis personajes favoritos del mundo de los countryballs.</p>
         </div>
 
