--- a/profile1.html
+++ b/profile1.html
@@ -166,7 +166,7 @@
         <div class="redes-sociales">
             <h3>Conéctate conmigo:</h3>
             <ul>
-                <li><a href="https://twitter.com/miusuario" target="_blank">Twitter</a></li>
+                <li><a href="https://twitter.com/Manuelx1227059" target="_blank">Twitter</a></li>
                 <li><a href="https://instagram.com/miusuario" target="_blank">Instagram</a></li>
                 <li><a href="https://tormblog.com/miusuario" target="_blank">TormBlog</a></li>
             </ul>
