--- a/CBallscomics.html
+++ b/CBallscomics.html
@@ -33,16 +33,17 @@ width: 60%;margin: auto;}
 <nav>
 <label> Bienvenido! </label>
 <label> .Espero que te guste :) </label>
-<label> <a href ="https://www.google.com/">.Irme de aqui </a> </label>
+<label> <a href ="https://www.google.com/">.Irse </a> </label>
 <label> <a href="mas_comics.html">mas comics</a> </label>
 <label> <a href="galeriadecballscomicsxd.html">Galeria</a> </label>
 <label> <a href="Info.html">Acerca de</a> </label>
-<label> <a href="Acercadelossphereshows.html">Comentarios y opiniones</a> </label>
+<label> <a href="Acercadelossphereshows.html">Opiniones</a> </label>
 <label> <a href="eventospendientes.html">Eventos!</a> </label>
 <label> <a href="Foro.html">Foro</a> </label>
 <label> <a href="Iniciodesesion.html">Crea una cuenta</a> </label>
 <label> <a href="TyC.html">Terminos y condiciones</a> </label>
-<label> <a href="CBallsComics Ejecutar.html">Ver otra vez la portada o Reiniciar</a> </label>
+<label> <a href="CBallsComics Ejecutar.html">Reiniciar</a> </label>
+<label> <a href="videos.html">Ver videos</a> </label>
 
 </nav>
 <section> Explora, ríe y aprende con nuestras countryballs.
