--- a/videos.html
+++ b/videos.html
@@ -65,9 +65,10 @@
             text-align: center;
         }
 
-        .video-card .video-placeholder {
-            background-color: #ddd;
-            height: 150px;
+        .video-card video {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
             margin-bottom: 10px;
         }
 
@@ -88,38 +89,56 @@
         <h1>CBalls Comics - Videos</h1>
         <p>boton que sirve para llenar un formulario de google y compartir videos</p>
         <div class="button-container">
-            <button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSdV45yiQdWswP5LM61YS1WFhQdmEub4U6vgosMfNOEBdUwkSA/viewform?usp=header'">Subir Video</button>
+            <button onclick="window.location.href='https://docs.google.com/forms/d/e/your-google-form-id/viewform'">Subir Video</button>
         </div>
     </div>
 
     <div class="gallery">
         <div class="video-card">
-            <div class="video-placeholder">video</div>
+            <video controls>
+                <source src="video1.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de video.
+            </video>
             <div class="title">titulo</div>
             <div class="uploaded-by">subido por:</div>
         </div>
         <div class="video-card">
-            <div class="video-placeholder">video</div>
+            <video controls>
+                <source src="video2.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de video.
+            </video>
             <div class="title">titulo</div>
             <div class="uploaded-by">subido por:</div>
         </div>
         <div class="video-card">
-            <div class="video-placeholder">video</div>
+            <video controls>
+                <source src="video3.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de video.
+            </video>
             <div class="title">titulo</div>
             <div class="uploaded-by">subido por:</div>
         </div>
         <div class="video-card">
-            <div class="video-placeholder">video</div>
+            <video controls>
+                <source src="video4.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de video.
+            </video>
             <div class="title">titulo</div>
             <div class="uploaded-by">subido por:</div>
         </div>
         <div class="video-card">
-            <div class="video-placeholder">video</div>
+            <video controls>
+                <source src="video5.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de video.
+            </video>
             <div class="title">titulo</div>
             <div class="uploaded-by">subido por:</div>
         </div>
         <div class="video-card">
-            <div class="video-placeholder">video</div>
+            <video controls>
+                <source src="video6.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de video.
+            </video>
             <div class="title">titulo</div>
             <div class="uploaded-by">subido por:</div>
         </div>
