--- a/CBallscomics.html
+++ b/CBallscomics.html
@@ -85,7 +85,7 @@ width: 60%;margin: auto;}
                 window.location.href = "otros_comics_xd.html"; // Redirigir a la página otros_comics_xd.html si la búsqueda coincide
                 break;
             case "popular":
-                window.location.href = "popularxdd1.html"; // Redirigir a la página otros_comics_xd.html si la búsqueda coincide
+                window.location.href = "popular1xdd.html"; // Redirigir a la página otros_comics_xd.html si la búsqueda coincide
                 break; 
             case "rusia en guerra con ucrania":
                 window.location.href = "rusiaenguerraconucrania.html"; // Redirigir a la página rusiaenguerraconucrania.html si la búsqueda coincide
