--- a/videos.html
+++ b/videos.html
@@ -99,8 +99,8 @@
                 <source src="video1.mp4" type="video/mp4">
                 Tu navegador no soporta el elemento de video.
             </video>
-            <div class="title">titulo</div>
-            <div class="uploaded-by">subido por:</div>
+            <div class="title">POLONIA ESCAPE!!!!!</div>
+            <div class="uploaded-by">subido por: scharez556</div>
         </div>
         <div class="video-card">
             <video controls>
