--- a/otros_comics_xd.html
+++ b/otros_comics_xd.html
@@ -19,7 +19,7 @@ width: 60%;margin: auto;}
 </head>
 <nav>
 <label> Bienvenido! </label>
-<label> .Espero que te guste :) </label>
+<label> .Espero que te guste :D </label>
 <label> <a href ="https://www.google.com/">.Irme de aqui </a> 
 </label>
 <label><a href="CBallscomics.html">atras</a>
