--- a/CBallscomics.html
+++ b/CBallscomics.html
@@ -90,6 +90,9 @@ width: 60%;margin: auto;}
             case "rusia en guerra con ucrania":
                 window.location.href = "rusiaenguerraconucrania.html"; // Redirigir a la página rusiaenguerraconucrania.html si la búsqueda coincide
                 break;
+            case "scharez556":
+                window.location.href = "profile1.html"; // Redirigir a la página rusiaenguerraconucrania.html si la búsqueda coincide
+                break;
             default:
                 alert("No se encontraron resultados para: " + query); // Mostrar un mensaje de alerta si no se encuentra ninguna coincidencia
         }
