--- a/postingtatles.html
+++ b/postingtatles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Postingtatles</title>
+    <title>Mi Red Social - Twitter Clon</title>
     <style>
         /* Estilos generales */
         body {
@@ -50,6 +50,7 @@
 
         .home h2 {
             font-size: 36px;
+            margin-bottom: 10px; /* Añadir un margen para dar espacio */
         }
 
         .home p {
@@ -79,6 +80,7 @@
             border-radius: 5px;
             background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 40px; /* Añadir un margen inferior para evitar el superposicionamiento */
         }
 
         h2 {
@@ -97,7 +99,7 @@
             color: white;
             padding: 10px 0;
             text-align: center;
-            position: absolute;
+            position: relative;
             width: 100%;
             bottom: 0;
         }
