--- a/postingtatles.html
+++ b/postingtatles.html
@@ -195,12 +195,12 @@
 
     <script>
         // Confirmación cuando el usuario hace clic en "Registrarse"
-        document.querySelector('a[href="ENLACE_DEL_FORMULARIO_DE_REGISTRO"]').addEventListener('click', function() {
+        document.querySelector('a[href="https://docs.google.com/forms/d/e/1FAIpQLSfOIrj43M6b6rlw9HesVqngucTkQhhZ63oygv87jGU7pLz5aw/viewform?usp=sf_link"]').addEventListener('click', function() {
             alert("Redirigiendo al formulario de registro...");
         });
 
         // Confirmación cuando el usuario hace clic en "Publicar"
-        document.querySelector('a[href="ENLACE_DEL_FORMULARIO_DE_POST"]').addEventListener('click', function() {
+        document.querySelector('a[href="https://docs.google.com/forms/d/e/1FAIpQLSd14OJHs6MHeLmJ3H8Gt5gXa_tcIpniIC8G10oOignloHQoGg/viewform?usp=header"]').addEventListener('click', function() {
             alert("Redirigiendo al formulario de publicación...");
         });
     </script>
