--- a/postingtatles.html
+++ b/postingtatles.html
@@ -148,7 +148,7 @@
 
     <!-- Sección de Bienvenida -->
     <section id="home" class="home">
-        <h2>Bienvenidos a Mi Red Social</h2>
+        <h2>Bienvenidos a Postingtatles</h2>
         <p>Conecta con personas y comparte tus pensamientos al instante.</p>
         <a href="#register" class="button">Registrarse</a>
         <a href="#post" class="button">Publicar un Post</a>
@@ -194,7 +194,7 @@
 
     <!-- Pie de página -->
     <footer>
-        <p>&copy; 2025 Mi Red Social</p>
+        <p>&copy; 2025 Postingtatles</p>
     </footer>
 
     <script>
