--- a/profile1.html
+++ b/profile1.html
@@ -160,7 +160,7 @@
         <div class="perfil-info">
             <img src="POLANDXDD1.png" alt="Foto de perfil" class="foto-perfil">
             <h2>Mi Nombre: [scharez556  (Mod) ]</h2>
-            <p><strong>Descripción:</strong> Soy un creador de cómics de CBalls, con un gran amor por la creatividad y el humor. Aquí comparto mis aventuras y mis personajes favoritos del mundo de los countryballs.</p>
+            <p><strong>Descripción:</strong> Soy el creador de cómics de CBalls, con un gran amor por la creatividad y el humor. Aquí comparto mis aventuras y mis personajes favoritos del mundo de los countryballs. Además tengo una gran pasión por crear cosas webs e interfaces como L0G1NS y eso (aunque siempre terminan desechados esos proyectos)</p>
         </div>
 
         <div class="redes-sociales">
