--- a/CBallscomics.html
+++ b/CBallscomics.html
@@ -195,7 +195,7 @@ width: 60%;margin: auto;}
 
 <label> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTv72QeYsBVIBRCVAWk4m4-MUR60kRMT7Sja6USO1kBBVbmg/viewform?usp=sf_link">Guardar un cómic en la galería</a> </label>
 
-        <label> <a href="https://alguienxd99.github.io/cballscomics.github.io/Polskand-services.html">Polskand Services</a> </label>
+        <label> <a href="https://alguienxd99.github.io/cballscomics/Polskand-services.html">Polskand Services</a> </label>
 
 </body>
 </html>
