--- a/postingtatles.html
+++ b/postingtatles.html
@@ -204,7 +204,7 @@
         });
 
         // Confirmación cuando el usuario hace clic en "Publicar"
-        document.querySelector('a[href="https://docs.google.com/forms/d/e/1FAIpQLSd14OJHs6MHeLmJ3H8Gt5gXa_tcIpniIC8G10oOignloHQoGg/viewform?usp=header"]').addEventListener('click', function() {
+        document.querySelector('a[href="https://docs.google.com/forms/d/e/1FAIpQLSdLCSxS68zQAufEqP41GFofBUl5H3c-6r4zQC8ODqAEK8ew_g/viewform?usp=dialog"]').addEventListener('click', function() {
             alert("Redirigiendo al formulario de publicación...");
         });
     </script>
