--- a/postingtatles.html
+++ b/postingtatles.html
@@ -136,7 +136,7 @@
     <!-- Barra de Navegación -->
     <header>
         <div class="navbar">
-            <h1>Mi Red Social</h1>
+            <h1>Postingtatles</h1>
             <nav>
                 <a href="#home">Inicio</a>
                 <a href="#register">Registrarse</a>
